refactor: 보류와 대기가 있을 때 보류를 삭제하면 대기를 보류시키도록 변경